# HyperDesk

./: .gitignore  CLAUDE.md  LICENSE  PRIVACY.md  README.md  THIRD-PARTY-NOTICES.md  design.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: release.yml  store-submit.yml
e2e/: package-lock.json  package.json  tsconfig.json  wdio.conf.ts
e2e/specs/: smoke.spec.ts
landing-page/: index.html  netlify.toml  package-lock.json  package.json  tailwind.config.js  vite.config.ts
landing-page/src/: App.tsx  index.css  marquee.d.ts  types.ts
md/: REPORT.md  TEST_HARNESS.md
memory/: MEMORY.md  swallow-debug-file-logging.md  swallow-resize-is-rdp-limit.md
src/: App.css  App.sidebar.css  App.tsx  main.tsx  types.ts
src-tauri/: Cargo.toml  build.rs  hyperdesk-e2e.exe.manifest  hyperdesk.exe.manifest  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  hosts.rs  lib.rs  main.rs  models.rs  swallow.rs
src/__tests__/: EventsPage.test.tsx  NetworkPage.test.tsx  SnapshotsPage.test.tsx  error-utils.test.ts  layout-utils.test.ts  net.test.ts  setup.ts
src/components/: AssetModal.tsx  BentoCell.tsx  ColumnToggle.tsx  CommandPalette.tsx  ConfirmModal.tsx  CreateVmModal.tsx  ErrorBoundary.tsx  EventsPage.tsx  HeatmapView.tsx  LicenseModal.tsx  MemoModal.tsx  MultiView.tsx  NetworkPage.tsx  RackAsset.tsx  RemotePage.tsx  SettingsPage.tsx  Sidebar.tsx  SnapshotsPage.tsx  Sparkline.tsx  StatusBadge.tsx  SwallowSlot.tsx  TagEditor.tsx  Toast.tsx  (+3 more)
(+12 files in other folders)
